# Power-Dashboard

./: .gitignore  README.md
myfirstreact/: README.md
myfirstreact/src/: index.js
powerdash-react/: package-lock.json  package.json
powerdash-react/public/: index.html
powerdash-react/src/: AnaItem.js  ApiHandler.js  App.js  App.test.js  Main.css  Main.js  Map.js  SunChart.js  UtilityToggle.js  datas.js  index.js
server/: README.md  pyproject.toml
server/powerdash/: data_classes.py  data_manipulator.py  generator.py  response.py  server.py
server/powerdash.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
