[tool.poetry]
name = "powerdash"
version = "0.1.0"
description = "Power Dashboard for Hackathon ENGIE challenge"
authors = ["Tom Paoloni <paoloni.6@osu.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
CherryPy = "^18.3"
pandas = "^0.25.3"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
